# oop

./: .gitignore  README.md
lab1/: CMakeLists.txt  cube.txt
lab1/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
lab1/model/: call_model.cpp  call_model.h  dot.cpp  dot.h  dot_and_vector.h  errors.h  model.cpp  model.h  segment.cpp  segment.h  size.cpp  size.h  vector.cpp  vector.h
lab3/: CMakeLists.txt  lab3.drawio  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab3/Command/: AddObjectCommand.cpp  AddObjectCommand.h  AddToCompositeCommand.cpp  AddToCompositeCommand.h  ClearSceneCommand.cpp  ClearSceneCommand.h  Command.h  DrawSceneCommand.cpp  DrawSceneCommand.h  MoveCommand.cpp  MoveCommand.h  QtDrawSceneCommand.cpp  QtDrawSceneCommand.h  RemoveFromCompositeCommand.cpp  RemoveFromCompositeCommand.h  RemoveObjectCommand.cpp  RemoveObjectCommand.h  RotateCommand.cpp  RotateCommand.h  ScaleCommand.cpp  ScaleCommand.h  SceneCommand.h  SceneObjectCommand.h
lab3/Concepts/: Implementation.h
lab3/Facade/: Facade.h
lab3/Geometry/: Dot.cpp  Dot.h  Segment.cpp  Segment.h  TransformMatrix.cpp  TransformMatrix.h  Vector.cpp  Vector.h
lab3/Manager/: BaseManager.h  DrawManager.cpp  DrawManager.h  LoadManager.cpp  LoadManager.h  SceneManager.cpp  SceneManager.h  TransformManager.cpp  TransformManager.h
lab3/ManagerCreator/: DrawManagerCreator.cpp  DrawManagerCreator.h  LoadManagerCreator.cpp  LoadManagerCreator.h  SceneManagerCreator.cpp  SceneManagerCreator.h  TransformManagerCreator.cpp  TransformManagerCreator.h
lab3/ManagerVisitor/: ManagerVisitor.h
lab3/Scene/: Scene.cpp  Scene.h
lab3/SceneObject/: Camera.cpp  Camera.h  Composite.cpp  Composite.h  FrameModel.cpp  FrameModel.h  Invisible.cpp  Invisible.h  SceneObject.cpp  SceneObject.h  Visible.cpp  Visible.h
lab3/SceneObjectCreator/: FrameModelBaseCreator.cpp  FrameModelBaseCreator.h  FrameModelBuilder.h  FrameModelLoadCreator.cpp  FrameModelLoadCreator.h  FrameModelLoader.cpp  FrameModelLoader.h  LoadSolution.cpp  LoadSolution.h  SceneObjectCreator.h  TemplateSceneObjectCreator.h
lab3/SceneVisitor/: DrawVisitor.cpp  DrawVisitor.h  SceneVisitor.h
lab3/WindowAdapter/: QtAdapter.cpp  QtAdapter.h  WindowAdapter.h
lab3/resources/: cube.txt  pyramide.txt
lab4/: CMakeLists.txt
lab4/docs/: Document1.docx  lab4.drawio
lab4/interface/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
lab4/lift/: button.cpp  button.h  cabin.cpp  cabin.h  controller.cpp  controller.h  doors.cpp  doors.h  lift.cpp  lift.h  settings.h
lab5/: laba5.drawio
